Version 3.33 - 5 October 2009, by Christophe Fergeau

- fix lookup of existing pubkeys (#53710) (by Pascal Terjan)

Version 3.32 - 10 August 2009, by Christophe Fergeau

- backtrack_selected: use set_rejected_and_compute_diff_provides for package
  removal (Anssi Hannula)
- obey options (keep, nodeps) when unselecting current package in the case
  that was added in 3.31 (Anssi Hannula)

Version 3.31 - 28 July 2009, by Christophe Fergeau

- add support for querying %disttag & %distepoch (by Per Øyvind Karlsen)
- clean up and bring back rpm5.org support (by Per Øyvind Karlsen)
- keep track of sources for obsoleted/removed levels (#50666) Anssi Hannula)
- keep psel/promote info and remove deadlocked pkg instead of aborting upgrade
  (#52105, Anssi Hannula)
- _handle_conflicts: check all provides for conflicts, not just package name
  (#52135, Anssi Hannula)
- unselect current package if an avoided package is already selected (#52145,
  Anssi Hannula)
- do not try to promote to an older package (#52460, Anssi Hannula)
- add a backtrack entry "conflicts" for avoided packages in backtrack_selected
  (#52153, Anssi Hannula)

Version 3.30 - 11 May 2009, by Christophe Fergeau

- rework public key handling since librpm behaviour has changed. It's no longer
  possible to tell it to add the same key multiple times which was causing
  weird "unable to import pubkey" messages when a mirror contains different
  pubkeys for the same key, fixes #50383

Version 3.29 - 27 March 2009, by Christophe Fergeau

- fix regression introduced by fix for bug #47803 (fix by Anssi Hannula).
  Without this patch, urpmi got stuck in an infinite loop when trying 
  to upgrade from 2008.1.

Version 3.28 - 25 March 2009, by Christophe Fergeau

- postpone user choices as much as possible to avoid asking the user
  unnecessary questions, (bug #48100, Anssi Hannula)

Version 3.27 - 24 March 2009, by Christophe Fergeau

- don't silently install suggests (bug #47934)